--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,19 +1,17 @@
-</section> <!-- wrapper -->
-<footer class="site__footer">
-    <div class="wrap">
-        <div class="gw">
-            <div class="g three-quarters  small-one-whole">
-            Build with <a href="http://sass-lang.com">Sass</a>, <a href="http://jekyllrb.com">Jekyll</a> and <span class="love">&hearts;</span>. 
-            Hosted on <a href="http://github.com/kevingimbel/kevingimbel.github.io">Github</a>, some files at <a href="http://uberspace.de">Uberspace.de</a>. 
-            <a href="/imprint">Imprint</a>
-        </div>
 
-        <div class="g one-quarter small-one-whole">
-            <a href="https://twitter.com/_kevinatari" rel="me">@_kevinatari</a> |
-            <a href="https://github.com/kevingimbel" rel="me">GitHub</a>
-        </div>
-        </div>
-    </div> <!-- wrap -->
+<footer class="stage footer contrast">
+  <p class="copy">
+    Build with <a href="http://sass-lang.com">Sass</a>, <a href="http://jekyllrb.com">Jekyll</a> and <span class="love">&hearts;</span>.
+    Hosted on <a href="http://github.com/kevingimbel/kevingimbel.github.io">Github</a>, some files at <a href="http://uberspace.de">Uberspace</a>.
+    </p>
+    <nav>
+      <ul>var social = {
+        <li>github: <a href="https://github.com/kevingimbel">'/kevingimbel'</a>,<br></li>
+        <li>twitter: <a href="https://twitter.com/_kevinatari">'@_kevinatari'</a>,<br></li>
+        <li>google_plus: <a href="https://google.com/+KevinGimbel">'+KevinGimbel'</a><br></li>
+      };
+    </ul>
+    </p>
 </footer>
 </body>
 <script type="text/javascript">
@@ -45,7 +43,7 @@ WebFontConfig = {
  wf.async = 'true';
  var s = document.getElementsByTagName('script')[0];
  s.parentNode.insertBefore(wf, s);
- })(); 
+ })();
 </script>
 <!-- Piwik -->
 <script type="text/javascript">
