--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,8 +2,10 @@
 layout: compress
 ---
 {% include header.html %}
-<section class="block__page">
+<section class="stage">
+  <div class="inner">
   <h2>{{page.title}}</h2>
   {{ content }}
+  </div>
 </section>
 {% include footer.html %}
