--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -3,22 +3,24 @@ layout: compress
 ---
 
 {% include header.html %}
-<section class="block__page">
-    <h2>Archive</h2>
-
-{% for post in site.posts  %}
-    <article class="article__list">
-        <div class="gw">
-            <h2 class="g three-quarters small-one-whole" {% if post.category %} data-category="{{post.category}} " {% endif %}>
-                <a href="{{post.url}}" title="Read the article '{{ post.title }}'">{{ post.title }}</a>
-            </h2>
-            <div class="g one-quarter small-one-whole text--right">
-                <p>{{ post.date | date_to_string }} //
-                    <span class="category  {{ post.category }}">{{ post.category }}</span>
-                </p>
-            </div>
-        </div><!-- gw -->
-    </article>
-{% endfor %}
+<section class="stage">
+  <div class="inner inner--tb">
+    <h2>{{page.title}}</h2>
+    {{ content }}
+  </div>
+    {% for post in site.posts  %}
+  		<article class="inner">
+  			<h3 class="article--headline" data-article-id="{{ post.id }}"><a href="{{ post.url }}" title="Read the article '{{ post.title }}'">{{ post.title }}</a></h3>
+  				{{ post.excerpt }}
+  			<p><a href="{{ post.url }}" title="Read more">Read more &rarr; </a></p>
+  				{% if post.tags %}
+  					<div class="article__tags article__footer">
+  						{% for tag in post.tags %}
+  							<span class="article--tag"><a href="/tags/#{{ tag | downcase | replace:' ','_' }}">#{{ tag }}</a></span>
+  						{% endfor %}
+  					</div>
+  				{% endif %}
+  		</article>
+  	{% endfor %}
 </section>
 {% include footer.html %}
