Added Anchor links to Home
Added some Anchor links to the home page so that I can link to the three sections easily by using
URLs like http://kevingimbel.com/#blog, http://kevingimbel.com/#event and
http://kevingimbel.com/#project. Also pulled latest changes made on GitHub.com

--- a/_layouts/front-page.html
+++ b/_layouts/front-page.html
@@ -7,7 +7,7 @@ layout: compress
 <section class="stage blog">
 
 	{% for post in site.posts  | limit: 1 %}
-		<article class="latest inner">
+		<article class="latest inner" id="blog">
 		  <h4 class="pre-heading">Recently I wrote:</h4>
 			<h2 class="article--headline" data-article-id="{{ post.id }}"><a href="{{ post.url }}" title="Read the article '{{ post.title }}'">{{ post.title }}</a></h2>
 				{{ post.excerpt }}
@@ -25,7 +25,7 @@ layout: compress
 
 
 {% for event in site.data.events  | limit: 1 %}
-<section class="stage events">
+<section class="stage events" id="event">
 		<article class="latest inner">
 		  <h4 class="pre-heading">Let's hang out at:</h4>
 			<h2 class="article--headline">{{ event.name }}</h2>
@@ -38,7 +38,7 @@ layout: compress
 </section>
 {% endfor %}
 
-<section class="stage projects contrast">
+<section class="stage projects contrast" id="project">
 
 		<article class="inner">
 			<h4>Lately I build:</h4>
