Clean Up! Removed Stuff, added new; Was about time.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Front-End Developer from Frankfurt,
     Germany. I write about CSS, Sass, HTML and JavaScript. Sometimes I like to
     take photos.">
-    <meta name="keywords" content="Front-End, Developer, Sass, JavaScript,
+    <meta name="keywords" content="Front-End, Developer, CSS, JavaScript,
     Germany, Frankfurt,
     {% if page.tags %}
     {% for tag in page.tags %}
