--- a/_layouts/front-page.html
+++ b/_layouts/front-page.html
@@ -42,6 +42,13 @@ layout: compress
 
 		<article class="inner">
 			<h4>Lately I build:</h4>
+			<h2><a href="https://github.com/kevingimbel/vhost" title="vhost on GitHub">vhost</a></h2>
+			<p><code>vhost</code> is a command line utillity to create new Apache Virtual Hosts, add them to the <code>/etc/hosts/</code> file and
+				create a dummy Document Root under <code>/var/www/html/</code>. It's written in bash and comes with a template.</p>
+			<p><a href="https://github.com/kevingimbel/vhost" title="vhost on GitHub">See vhost on GitHub</a></p>
+		</article>
+
+		<article class="inner">
 			<h2><a href="https://github.com/kevingimbel/viewSwitcher" title="viewSwitcher.js on GitHub">viewSwitcher.js</a></h2>
 			<p>viewSwitcher is a dependency free, isolated module to handle different "views" and very basic "routing" through URL hashes.</p>
 			<p><a href="https://github.com/kevingimbel/viewSwitcher" title="viewSwitcher.js on GitHub">See viewSwitcher.js on GitHub</a></p>
