--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,11 +20,29 @@ layout: compress
             <p>I'd appreciate your feedback on <a href="http://twitter.com/_kevinatari">Twitter</a> as well as request for further posts or related questions. Or just say Hi! <a href="http://codepen.io/pen">Happy coding!</a></p>
         </div>
       {% endif %}
+
+    {% if page.comments %}
+      <div id="disqus_thread" class="disqus"></div>
+      <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+    {% endif %}
+
+    {% include prev-next.html %}
     </footer>
   </div>
 </div>
 </article>
+{% if page.comments %}
+<script type="text/javascript">
+    /* * * CONFIGURATION VARIABLES * * */
+    var disqus_shortname = 'kevingimbel';
 
-{% include prev-next.html %}
+    /* * * DON'T EDIT BELOW THIS LINE * * */
+    (function() {
+        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+    })();
+</script>
+{% endif %}
 
 {% include footer.html %}
