[DEV] Install Guard / guard-jekyll-plus
This commit adds a Gemfile, Guardfile and a post explaining how those two
speeded up my jekyll development workflow. Yay!

Also small CSS changes.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,12 +25,11 @@
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@_kevinatari">
     <meta name="twitter:domain" content="http://kevingimbel.com">
-    <meta name="twitter:title" content="{% if page.title %} {{ page.title }}
-    &ndash; {% endif %} kevingimbel.com">
-    <meta name="twitter:description" content="{{ page.excerpt | strip_html}} (Read more...)">
+    <meta name="twitter:title" content="{% if page.title %} {{ page.title }} &ndash; {% endif %} kevingimbel.com">
     <!--
     I use this solution by Christian Fei to remove the P tags from the excerpt. https://gist.github.com/christian-fei/41b51d9ad9fa55ccbb10
     -->
+    <meta name="twitter:description" content="{{ page.excerpt | strip_html}} (Read more...)">
 
     <link rel="stylesheet" type="text/css" href="/dest/css/style.css">
     <link rel="dns-prefetch" href="http://fonts.googleapis.com">
