Update Imprint; Add rel="nofollow"
Updated the Imprint with more information about Piwik Analytics and removed my
address. Added `rel="nofollow"` to some links.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,6 +3,7 @@
   <p class="copy">
     Build with <a href="http://sass-lang.com">Sass</a>, <a href="http://jekyllrb.com">Jekyll</a> and <span class="love">&hearts;</span>.
     Hosted on <a href="http://github.com/kevingimbel/kevingimbel.github.io">Github</a>, some files at <a href="http://uberspace.de">Uberspace</a>.
+    <a href="/imprint" rel="nofollow">Imprint</a>
     </p>
     <nav>
       <ul>var social = {
@@ -11,7 +12,7 @@
         <li>google_plus: <a href="https://google.com/+KevinGimbel">'+KevinGimbel'</a><br></li>
       };
     </ul>
-    </p>
+    <p class="copy">This website uses Piwik Analytics, you can see more about it <a href="/imprint/#tracking" rel="nofollow">in the Imprint</a>.</p>
 </footer>
 </body>
 <script type="text/javascript">
