Add photography section.
Always loved photography and I guess I should really get back into it. Linked a
fiew sites and mentioned it - we'll see.

--- a/_layouts/front-page.html
+++ b/_layouts/front-page.html
@@ -55,4 +55,16 @@ layout: compress
 		</article>
 
 </section>
+
+<section class="stage photos" id="photography">
+	<article class="inner">
+		<h4>I used to take photos.</h4>
+		<h2>Photography</h2>
+		<p>When I was 15 or so I started getting interested in Photography and shortly even worked as one for smaller events and concerts/bands. These days I am mostly
+		sharing photos on <a href="https://eyeem.com/u/kevingimbel">EyeEm</a> or  <a href="https://instagram.com/_kevinatari">Instagram</a>. Some of my EyeEm images are for sale in <a href="http://www.gettyimages.de/search/photographer?excludenudity=true&mediatype=photography&page=1&photographer=kevin%20gimbel%20%2F%20eyeem&sort=best">Getty Images</a>.</p>
+		<p>Older photos as well as a few newer can be found on <a href="https://www.flickr.com/photos/dearwhoever/">my Flickr page</a>.</p>
+	</article>
+
+</section>
+
 {% include footer.html %}
